# SRT

./: Makefile.am  README.md  autogen.sh  configure.ac  git.mk
src/: SRT_config.h  SRT_define.h  SRT_endian.h  SRT_error.c  SRT_error.h  SRT_log.c  SRT_log.h  SRT_main.c  SRT_std.c  SRT_std.h
